--- a/page/assets/css/classes.css
+++ b/page/assets/css/classes.css
@@ -7,6 +7,7 @@
 
 .white-bg {
     background: var(--white-color);
+    color: var(--primary-color);
 }
 
 .main-content {
@@ -20,5 +21,5 @@
 }
 
 .menu-spacing {
-    min-height: 6.5rem;
+    min-height: 65px;
 }
