--- a/page/assets/css/elements.css
+++ b/page/assets/css/elements.css
@@ -1,44 +1,57 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 2rem;
-    color: var(--primary-color);
-    line-height: 1.5;
+  font-family: "Open Sans", sans-serif;
+  font-size: 2rem;
+  color: var(--primary-color);
+  line-height: 1.5;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
-    font-size: 6rem;
-    text-transform: uppercase;
+  font-size: 6rem;
+  text-transform: uppercase;
 }
 
 h2 {
-    font-size: 5.5rem;
+  font-size: 5rem;
+  margin-bottom: 5rem;
+  text-transform: uppercase;
+  line-height: 1.2;
 }
 
 h3 {
-    font-size: 5rem;
+  font-size: 5rem;
 }
 
 h4 {
-    font-size: 4.5rem;
+  font-size: 4.5rem;
 }
 
 h5 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
 h6 {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
+}
+
+p {
+  margin-bottom: 3rem;
 }
